--- a/styles.css
+++ b/styles.css
@@ -276,3 +276,20 @@ ul li {
         text-align: center;
     }
 
+.language-switcher {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.language-option {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
+
+.language-option img {
+    margin-right: 5px;
+}
